--- a/BCN_2019/css/style.css
+++ b/BCN_2019/css/style.css
@@ -778,3 +778,9 @@ h1, h2, h3, h4, h5,
   width: 40px;
   height: 40px;
   line-height: 40px; }
+
+
+  iframe {
+    width: 100%;
+    height: 300px;
+  }
